Updated design, logo and sandbox

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
+title: Pocket lisp
+description: Simple and configurable generic script language.
+logo: /assets/img/logo.png
 theme: jekyll-theme-leap-day
