update docs and page config

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "http-server": "^0.12.3",
     "husky": "^4.2.5",
     "npm-dts": "^1.2.1",
-    "pocket-lisp": "^0.7.0",
-    "pocket-lisp-stdlib": "^0.7.0",
+    "pocket-lisp": "lastest",
+    "pocket-lisp-stdlib": "latest",
     "prettier": "2.0.5",
     "rollup": "2.7.6",
     "source-map-support": "0.5.19",
